# money-balancer

./: .dockerignore  .drone.yml  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build.rs  generate-entities.sh  generate-server.sh  openapi.yaml  package-lock.json  seed.sh  tsconfig.json
.github/workflows/: preview.yml  release.yml
client/: .eslintignore  .eslintrc.js  .prettierignore  .prettierrc  craco.config.js  package-lock.json  package.json  tsconfig.json
client/public/: .domains  index.html  manifest.json
client/src/: App.tsx  index.tsx  service-worker.ts  (+1 more)
migration/: Cargo.toml
server/: .gitignore  Cargo.toml  README.md  generate-entities.sh  openapi.yaml  package.json  wrangler.toml
server-ts/: test.sh
server/migration/src/: m20220912_000001_create_user_table.rs  m20220912_000003_create_group_member_table.rs  m20220920_234028_create_transaction_table.rs  m20220920_234539_create_debt_table.rs
server/src/: index.ts  main.rs
server/src/guards/: authentication.rs
server/src/model/: balance.rs  balance_member.rs  debt.rs  group.rs  group_member.rs  mod.rs  prelude.rs  transaction.rs  user.rs  user_debt.rs
server/src/resources/: openapi.yaml
server/src/resources/api/v1/: openapi.html
server/src/routes/: balance.rs  balance.ts  group.rs  mod.rs  user.rs  user.ts
server/src/schema/: m20220912_000001_create_user_table.rs  m20220912_000002_create_balance_table.rs  m20220912_000003_create_balance_member_table.rs  m20220912_000004_create_user_debt_table.rs  mod.rs
server/src/services/: group.rs  user.rs
src/: index.ts  main.rs
(+69 files in other folders)
