[package]
name = "money-balancer-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
sea-orm = { version = "^0.9.0", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros" ] }
sea-orm-migration = "^0.9.0"
rocket = { version = "^0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.1.2", features = [ "v4", "fast-rng", "macro-diagnostics"]}
pwhash = "1"
jsonwebtoken = "8"